# ZenodoZipDownloader

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: pre-commit.yml  publish.yml
tests/: test_cli.py  test_integration_download.py
zenodozipdownloader/: __init__.py  __main__.py  _version.py  core.py
